--- a/public/css/signUp.css
+++ b/public/css/signUp.css
@@ -6,11 +6,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f2f2f2;
+  background-color: #8d8383;
 }
 
 .container {
-  background-color: #fff;
+  background-color: #baafaf;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   padding: 20px;
   border-radius: 5px;
