--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -3,17 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Expense Tracker - Sign Up</title>
-    <link rel="stylesheet" href="../css/signUp.css" />
+    <title>Expense Tracker - Login</title>
+    <link rel="stylesheet" href="../css/loginPage.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Sign Up</h1>
-      <form id="signup-form">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" required />
-        </div>
+      <h1>Login</h1>
+      <form id="login-form">
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
@@ -22,20 +18,18 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Sign Up</button>
+        <button type="submit">Login</button>
       </form>
-      <div class="login-link">
-        <p>
-          Already have an account? <a href="../views/loginPage.html">Login</a>
-        </p>
+      <div class="signup-link">
+        <p>Don't have an account? <a href="signUp.html">Sign up</a></p>
       </div>
     </div>
+    <script src="../js/loginPage.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
       integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="../js/signUp.js"></script>
   </body>
 </html>
