--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -46,14 +46,36 @@ select {
 }
 
 button[type="submit"] {
-  background-color: #007bff;
+  background-color: #000000;
   color: #fff;
   padding: 10px 15px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  font-weight: bold;
+}
+button:hover {
+  background-color: #20096c;
+}
+#buy-premium-button {
+  background-color: #000000; /* Change the background color */
+  color: #fff; /* Text color */
+  padding: 10px 15px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-weight: bold; /* Make the text bold */
 }
 
+/* Change button color on hover */
+#buy-premium-button:hover {
+  background-color: #20096c; /* Darker color on hover */
+}
+
+/* Optional: Center the button */
+#buy-premium-button {
+  margin: 5px auto;
+}
 .right-column {
   flex: 1; /* Make the right column expand to fill available space */
   max-height: 500px; /* Set a maximum height for the right column */
@@ -73,7 +95,7 @@ ul {
 .expense-item {
   background-color: #f5f5f5;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #7a7878;
   border-radius: 3px;
   margin-bottom: 10px;
 }
