--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -32,12 +32,16 @@
           </div>
           <button type="submit">Add Expense</button>
         </form>
+        <button id="buy-premium-button" class="premium-button">
+          Buy Premium Membership
+        </button>
       </div>
       <div class="right-column">
         <h2>Expense List</h2>
         <ul id="expense-list"></ul>
       </div>
     </div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
       integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
