--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -32,6 +32,7 @@
           </div>
           <button type="submit">Add Expense</button>
         </form>
+        <div id="message"></div>
         <button id="buy-premium-button" class="premium-button">
           Buy Premium Membership
         </button>
