--- a/public/views/forgotPassword.html
+++ b/public/views/forgotPassword.html
@@ -3,31 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Expense Tracker - Login</title>
-    <link rel="stylesheet" href="../css/loginPage.css" />
+    <title>Expense Tracker - Reset Password</title>
+    <link rel="stylesheet" href="../css/forgotPassword.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Login</h1>
-      <form id="login-form">
+      <h1>Reset Password</h1>
+      <form id="reset-password-form">
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+        <div class="button-group">
+          <button type="submit">Reset Password</button>
         </div>
-        <button type="submit">Login</button>
+        <div><a href="../views/loginPage.html">Back to Login</a></div>
       </form>
-      <a href="../views/forgotPassword.html" id="forgot-password-link"
-        >Forgot Password?</a
-      >
-      <div class="signup-link">
-        <p>Don't have an account? <a href="signUp.html">Sign up</a></p>
-      </div>
     </div>
-    <script src="../js/loginPage.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+    <script src="../js/forgotPassword.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
       integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
