--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="../css/homePage.css" />
   </head>
   <body>
+    <header>
+      <h1>Expense Tracker</h1>
+      <p>Track Your Expenses</p>
+    </header>
     <div class="container">
-      <div class="left-column">
-        <h1>Expense Tracker</h1>
+      <div class="expense-form-container">
+        <h2>Expense Tracker</h2>
         <form id="expense-form">
           <div class="form-group">
             <label for="amount">Amount:</label>
@@ -37,12 +41,15 @@
           Buy Premium Membership
         </button>
       </div>
-      <div class="right-column">
+      <div class="expense-list-container">
         <h2>Expense List</h2>
         <ul id="expense-list"></ul>
       </div>
+      <div id="download-history-container">
+        <h2>Download History</h2>
+        <ul id="download-list"></ul>
+      </div>
     </div>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
       integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
@@ -50,5 +57,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="../js/homePage.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
