--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -41,7 +41,7 @@ header {
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 /* Form styling */
@@ -87,9 +87,18 @@ header {
   overflow-y: auto; /* Add vertical scrollbar when content exceeds max-height */
   padding: 20px;
   background-color: #908c8c;
+  color: #000;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   max-width: 35%;
+}
+.delete-button {
+  background-color: #d2cdcd;
+  color: #000000;
+  padding: 5px;
+  margin-left: 5px;
+  border: 1px solid #363636;
+  border-radius: 3px;
 }
 
 .delete-button:hover {
@@ -108,6 +117,33 @@ ul {
   border-radius: 3px;
   margin-bottom: 10px;
 }
+.pagination-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+}
+
+#prevPageBtn,
+#nextPageBtn {
+  background-color: #d2cdcd;
+  color: #080303;
+  padding: 5px 10px;
+  border: 1px solid #363636;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+#prevPageBtn:hover,
+#nextPageBtn:hover {
+  background-color: #0f0894;
+  color: #fff;
+}
+
+#currentPage {
+  font-weight: bold;
+}
+
 #message {
   margin-top: 20px;
   text-align: center;
