--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -38,6 +38,7 @@ header {
   box-shadow: 0 0 5px rgba(3, 3, 3, 0.3);
   border-radius: 2px;
   color: #060404;
+  max-width: 35%;
 }
 
 .form-group {
