--- a/views/homePage.html
+++ b/views/homePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="../css/homePage.css" />
+    <link rel="stylesheet" href="/css/homePage.css" />
   </head>
   <body>
     <header>
@@ -67,7 +67,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.0/axios.min.js"></script>
-    <script src="../js/homePage.js"></script>
+    <script src="/js/homePage.js"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
