--- a/public/views/signUp.html
+++ b/public/views/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker - Sign Up</title>
-    <link rel="stylesheet" href="/css/signUp.css" />
+    <link rel="stylesheet" href="../css/signUp.css" />
   </head>
   <body>
     <div class="container">
@@ -25,7 +25,9 @@
         <button type="submit">Sign Up</button>
       </form>
       <div class="login-link">
-        <p>Already have an account? <a href="/views/loginPage.html">Login</a></p>
+        <p>
+          Already have an account? <a href="../views/loginPage.html">Login</a>
+        </p>
       </div>
     </div>
     <script
@@ -34,6 +36,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="/js/signUp.js"></script>
+    <script src="../js/signUp.js"></script>
   </body>
 </html>
