--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -1,31 +1,57 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #fffefe;
+  font-family: "Arial", sans-serif;
+  background-color: #babdc0;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#leaderboard-container {
+  width: 80%;
+  max-width: 600px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
 h1 {
   text-align: center;
-  margin-top: 20px;
-  color: #060606;
-  background-color: rgb(255, 255, 255);
+  margin-bottom: 20px;
+  color: #333;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 ul {
   list-style: none;
   padding: 0;
-  margin: 20px;
+  margin: 0;
 }
 
 li {
-  padding: 10px;
+  padding: 15px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: transform 0.3s;
 }
 
 li:nth-child(even) {
-  background-color: #f5f5f5;
+  background-color: #f0f0f0;
+}
+
+li:hover {
+  transform: translateY(-2px);
+}
+
+li span {
+  font-weight: bold;
 }
