--- a/public/css/report.css
+++ b/public/css/report.css
@@ -4,52 +4,115 @@ body {
   padding: 0;
   background-color: #f5f5f5;
 }
+
 header {
-  background-color: #1a1a1a;
-  padding: 20px;
+  background-color: #2c3e50;
+  padding: 15px;
   text-align: center;
   color: #fff;
+  margin: auto;
+  width: 85%;
 }
+
+h1 {
+  margin: 0;
+  font-size: 24px;
+}
+
 .container {
-  max-width: 800px;
+  max-width: 900px;
   margin: 20px auto;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #908c8c;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #9a9999;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .report-section {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 h3 {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  color: #000000;
+  border-bottom: 2px solid #ecf0f1;
+  padding-bottom: 10px;
 }
 
 form {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 20px;
+}
+
+form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #34495e;
+}
+
+form input[type="date"],
+form input[type="week"],
+form input[type="month"],
+form input[type="number"],
+form button {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+form button {
+  background-color: #3498db;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+form button:hover {
+  background-color: #2980b9;
 }
 
 .report-table {
   width: 100%;
   border-collapse: collapse;
+  margin-bottom: 20px;
 }
 
 th,
 td {
-  border: 1px solid #060606;
-  padding: 8px;
+  border: 1px solid #ccc;
+  padding: 12px;
   text-align: left;
+  color: #34495e;
+}
+
+th {
+  background-color: #ecf0f1;
 }
 
 tfoot {
   font-weight: bold;
+  background-color: #ecf0f1;
 }
 
 /* Responsive Styling */
 @media (max-width: 600px) {
   .container {
     max-width: 100%;
+    padding: 10px;
+  }
+
+  form input[type="date"],
+  form input[type="week"],
+  form input[type="month"],
+  form input[type="number"],
+  form button {
+    width: 100%;
+  }
+
+  form {
+    flex-direction: column;
   }
 }
