--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker - Login</title>
-    <link rel="stylesheet" href="/css/loginPage.css" />
+    <link rel="stylesheet" href="../css/loginPage.css" />
   </head>
   <body>
     <div class="container">
@@ -20,14 +20,14 @@
         </div>
         <button type="submit">Login</button>
       </form>
-      <a href="/views/forgotPassword.html" id="forgot-password-link"
+      <a href="../views/forgotPassword.html" id="forgot-password-link"
         >Forgot Password?</a
       >
       <div class="signup-link">
-        <p>Don't have an account? <a href="/views/signUp.html">Sign up</a></p>
+        <p>Don't have an account? <a href="../views/signUp.html">Sign up</a></p>
       </div>
     </div>
-    <script src="/js/loginPage.js"></script>
+    <script src="../js/loginPage.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
       integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
