--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -65,12 +65,7 @@
         <ul id="download-list"></ul>
       </div>
     </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
-      integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
     <script src="../js/homePage.js"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
