--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker - Login</title>
-    <link rel="stylesheet" href="../css/loginPage.css" />
+    <link rel="stylesheet" href="/css/loginPage.css" />
   </head>
   <body>
     <div class="container">
@@ -28,6 +28,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-    <script src="../js/loginPage.js"></script>
+    <script src="/js/loginPage.js"></script>
   </body>
 </html>
