--- a/public/views/signUp.html
+++ b/public/views/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker - Sign Up</title>
-    <link rel="stylesheet" href="../css/signUp.css" />
+    <link rel="stylesheet" href="/css/signUp.css" />
   </head>
   <body>
     <div class="container">
@@ -31,6 +31,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-    <script src="../js/signUp.js"></script>
+    <script src="/js/signUp.js"></script>
   </body>
 </html>
