--- a/public/views/forgotPassword.html
+++ b/public/views/forgotPassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker - Reset Password</title>
-    <link rel="stylesheet" href="../css/forgotPassword.css" />
+    <link rel="stylesheet" href="/css/forgotPassword.css" />
   </head>
   <body>
     <div class="container">
@@ -21,6 +21,6 @@
       </form>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-    <script src="../js/forgotPassword.js"></script>
+    <script src="/js/forgotPassword.js"></script>
   </body>
 </html>
