--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="../css/leaderboard.css" />
+    <link rel="stylesheet" href="/css/leaderboard.css" />
   </head>
   <body>
     <!-- Content for the leaderboard -->
@@ -13,6 +13,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-    <script src="../js/leaderboard.js"></script>
+    <script src="/js/leaderboard.js"></script>
   </body>
 </html>
