--- a/public/views/report.html
+++ b/public/views/report.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Financial Reports Dashboard</title>
-    <link rel="stylesheet" href="../css/report.css" />
+    <link rel="stylesheet" href="/css/report.css" />
   </head>
 
   <body>
@@ -142,6 +142,6 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-    <script src="../js/report.js"></script>
+    <script src="/js/report.js"></script>
   </body>
 </html>
