--- a/public/views/resetPassword.html
+++ b/public/views/resetPassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker - Reset Password</title>
-    <link rel="stylesheet" href="../css/resetPassword.css" />
+    <link rel="stylesheet" href="/css/resetPassword.css" />
   </head>
   <body>
     <div class="container">
@@ -36,6 +36,6 @@
       </form>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-    <script src="../js/resetPassword.js"></script>
+    <script src="/js/resetPassword.js"></script>
   </body>
 </html>
