--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -27,7 +27,12 @@
         <p>Don't have an account? <a href="../views/signUp.html">Sign up</a></p>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"
+      integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="/js/loginPage.js"></script>
   </body>
 </html>
